Improve errors to include the error details

--- a/ballerina-shell/modules/shell-core/src/main/resources/template.execution.mustache
+++ b/ballerina-shell/modules/shell-core/src/main/resources/template.execution.mustache
@@ -63,7 +63,7 @@ function __stmts() returns any {
             {{/statement}}
         } on fail error e {
             {{{exprVarName}}} = ();
-            return e.message();
+            return e.message() + " " + e.detail().toBalString();
         }
     {{/lastStmt}}
 }
