--- a/ballerina-shell/modules/shell-core/src/main/resources/template.declaration.mustache
+++ b/ballerina-shell/modules/shell-core/src/main/resources/template.declaration.mustache
@@ -27,5 +27,17 @@ function __recall_any_error(string name) returns any|error { }
 function __memorize(string name, any|error value) { }
 public function __run() returns any { }
 function __stmts() returns any { }
-public function main() { _ = java:fromString(""); }
 function init() { }
+
+public function main() {
+    {{#varDclns}}
+        __memorize("{{{encodedName}}}", {{{name}}});
+    {{/varDclns}}
+    {{#newVarNames}}
+        __memorize("unknown",
+        {{{.}}} // Variable is unable to be referenced after declaration
+        );
+    {{/newVarNames}}
+
+    _ = java:fromString("");
+}
